syntax = "proto3";

package generic;
option go_package = "github.com/ligato/vpp-agent/api/generic";

// ModelSpec defines a model specification to identify a model.
message ModelSpec {

    // Module describes grouping for the model.
    string module = 1;

    // Version describes version of the model schema.
    string version = 2;

    // Type describes name of type described by this model.
    string type = 3;

    // Class describes purpose for the model.
    string class = 4;
}

// ModelDescriptor defines model descriptor to describe a model.
message ModelDescriptor {
    // Spec is a specificaiton the model was registered with.
    ModelSpec spec = 1;

    // ProtoName is a name of protobuf message representing the model.
    string proto_name = 2;

    message Option {
        string key = 1;
        repeated string values = 2;
    }
    repeated Option options = 3;
}

// MetaService defines the RPC methods for managing generic models.
service MetaService {

    // KnownModels returns information about service capabilities
    // including list of models supported by the server.
    rpc KnownModels (KnownModelsRequest) returns (KnownModelsResponse);
}

//------------------------------------------------------------------------------

message KnownModelsRequest {
    // TODO: filters
}
message KnownModelsResponse {
    repeated ModelDescriptor known_models = 1;
    repeated string active_modules = 2;
}
